--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<link rel="stylesheet" type="text/css" href="css/subNav.css">
 
 	<style>
-		.headerContaner{ position: fixed; background-color: #1B1B1B; z-index: 9999; }
+		.headerContaner{ position: fixed; background-color: #111; z-index: 9999; }
 		.subNavContainer{ margin-top: 110px }
 	</style>
 
