--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html ng-app="app">
 <head>
 	<meta name="apple-mobile-web-app-capable" content="yes"/>
-	<meta name="viewport" content="width=device-width">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0,target-densitydpi=device-dpi, user-scalable=no" />
+	<title>Prazor</title>
 	<link rel="stylesheet" type="text/css" href="css/framework-mx.css">
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
 	<link rel="stylesheet" type="text/css" href="css/angular-carousel.css">
@@ -11,12 +11,8 @@
 	<link rel="stylesheet" type="text/css" href="css/player-volume-control.css">
 	<link rel="stylesheet" type="text/css" href="css/subNav.css">
 
-	<style>
-		.headerContaner{ position: fixed; background-color: #111; z-index: 9999; }
-		.subNavContainer{ margin-top: 110px }
-	</style>
-
 	<script src="phonegap.js"></script>
+	<script src="scripts/NowPlaying.js"></script>
 </head>
 <body ng-controller="MainController" ng-swipe-left="showSidebar = false" class="player-view-{{playerType}}">
 	<div class="page-sidebar" ng-show="showSidebar" ng-include='"partials/userDetails.html"' style="height:{{windowHeight}}px"></div>		
@@ -36,9 +32,10 @@
 	<script src="scripts/angular-route.min.js"></script>
 	<script src="scripts/angular-touch.min.js"></script>
 	<script src="scripts/angular-carousel.min.js"></script>
+	<script src="scripts/angular-sanitize.js"></script>
 	<script src="scripts/slick.min.js"></script>
 	<script src="http://cdnapi.kaltura.com/p/1949551/sp/194955100/embedIframeJs/uiconf_id/30806841/partner_id/1949551"></script>
-
+	<script src="scripts/plugins/parser.min.js"></script>
 	<!-- Our Website Javascripts -->
 	<script src="scripts/app.js"></script>
 	<script src="scripts/services/xml2json.min.js"></script>
