lock screen plugin trial

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<link rel="stylesheet" type="text/css" href="css/subNav.css">
 
 	<script src="phonegap.js"></script>
-	<!-- <script src="scripts/NowPlaying.js"></script> -->
+	<script src="scripts/NowPlaying.js"></script>
 </head>
 <body ng-controller="MainController" ng-swipe-left="showSidebar = false" class="player-view-{{playerType}}">
 	<div class="page-sidebar" ng-show="showSidebar" ng-include='"partials/userDetails.html"' style="height:{{windowHeight}}px"></div>		
