--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html ng-app="app">
 <head>
-	<meta name="apple-mobile-web-app-capable" content="yes"/>
+	<meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'>
+	<meta http-equiv='cleartype' content='on'>
+	<meta charset='utf-8'>
+
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0,target-densitydpi=device-dpi, user-scalable=no" />
 	<title>Prazor</title>
 	<link rel="stylesheet" type="text/css" href="css/framework-mx.css">
