--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 	<meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'>
 	<meta http-equiv='cleartype' content='on'>
 	<meta charset='utf-8'>
-	<meta name="viewport" content="width=device-width">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0,target-densitydpi=device-dpi, user-scalable=no" />
+
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, target-densitydpi=medium-dpi, user-scalable=0" />
 	<title>Prazor</title>
 	<link rel="stylesheet" type="text/css" href="css/framework-mx.css">
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
