--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta http-equiv='cleartype' content='on'>
 	<meta charset='utf-8'>
 
-<!-- 	<meta name="viewport" content="width=device-width, target-densitydpi=medium-dpi, user-scalable=0" /> -->	
+	<meta name="viewport" content="width=device-width, target-densitydpi=medium-dpi, user-scalable=0" />	
 	<title>Prazor</title>
 	<link rel="stylesheet" type="text/css" href="css/framework-mx.css">
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
