added slack chat module to paage

--- a/index.html
+++ b/index.html
@@ -58,5 +58,10 @@
 	<script>
         app.initialize();
     </script>
+
+    <script src='https://cdn.slaask.com/chat.js'></script>
+	<script>
+	    _slaask.init('5de41f8d3e3bf771cc8ac707c8502535');
+	</script>
 </body>
 </html>
