--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<link rel="stylesheet" type="text/css" href="css/player-volume-control.css">
 	<link rel="stylesheet" type="text/css" href="css/subNav.css">
 
-	<script src="phonegap.js"></script>
+	<!-- <script src="phonegap.js"></script> -->
 	<!--<script src="scripts/NowPlaying.js"></script>-->
 </head>
 <body ng-controller="MainController" ng-swipe-left="showSidebar = false" class="player-view-{{playerType}}">
